--- a/TodoMvcApp/Views/Home/Index.cshtml
+++ b/TodoMvcApp/Views/Home/Index.cshtml
@@ -1,12 +1,5 @@
 ﻿@{
-    int number = 123;
     ViewData["Title"] = "Bosh sahifa";
 }
 
-<h1>ASP.NET Core MVC dan salom</h1>
-
-<input value="@number" />
-
-<p> home/index.cshtml fayli bu</p>
-
-<a href="/home/todo">todo sahifasiga o'tish</a>
+<a class="btn btn-primary" href="/home/todolist" >Todolar ro'yhati</a>
